fix(vitepress): do not let (in)correct sign overlap with code fragment

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -24,3 +24,8 @@
   border-right: 3px solid transparent;
   border-bottom: 4px solid #d11;
 }
+
+/* A code fragment has 'incorrect' or 'correct' type */
+.vp-doc div[class*='language-']:has(~ div) {
+  margin-top: 3rem;
+}
